--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "datasets>=3.1.0",
     "datasketch>=1.6.5",
-    "pandas>=2.2.3",
-    "polars>=1.14.0",
     "regex>=2024.11.6",
 ]
 
